k8s/prod/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
spec:
  selector:
    matchLabels:
      app: php
  replicas: 1
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: hseevo.azurecr.io/phpdemo:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    app: php
spec:
  selector:
    app: php
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
